--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,7 @@ environs==9.5.0
 requests==2.31.0
 beautifulsoup4==4.11.1
 lxml==4.9.3
+django-autoslug==1.9.9
+django-multiselectfield==0.1.12
+yookassa==2.4.0
+python-dateutil==2.8.2
